fix spacing at the bottom of the home page.

--- a/app/page.css
+++ b/app/page.css
@@ -2,8 +2,8 @@
   display: grid;
   gap: 5rem;
   color: white;
-  /* margin-left: 1rem;
-  margin-right: 1rem; */
+  margin-inline: 1rem;
+  margin-bottom: 2rem;
 }
 
 .about {
